--- a/.gitignore
+++ b/.gitignore
@@ -421,3 +421,4 @@ backend/node_modules/vary/index.js
 backend/node_modules/vary/LICENSE
 backend/node_modules/vary/package.json
 backend/node_modules/vary/README.md
+backend/.env
