--- a/.gitignore
+++ b/.gitignore
@@ -422,3 +422,13 @@ backend/node_modules/vary/LICENSE
 backend/node_modules/vary/package.json
 backend/node_modules/vary/README.md
 backend/.env
+backend/node_modules/dotenv/CHANGELOG.md
+backend/node_modules/dotenv/config.d.ts
+backend/node_modules/dotenv/config.js
+backend/node_modules/dotenv/LICENSE
+backend/node_modules/dotenv/package.json
+backend/node_modules/dotenv/README.md
+backend/node_modules/dotenv/lib/cli-options.js
+backend/node_modules/dotenv/lib/env-options.js
+backend/node_modules/dotenv/lib/main.d.ts
+backend/node_modules/dotenv/lib/main.js
